fix(style): stats number letter-spacing should be 0

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
   color: var(--clr-very-dark-desaturated-blue);
   font-weight: 700;
   font-size: 1.125rem;
+  letter-spacing: 0;
   line-height: 1.375rem;
   text-align: center;
   margin-bottom: 0.5625rem;
